--- a/index.html
+++ b/index.html
@@ -6,11 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nitin | Training</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Nitin Thakur</h1>
     <ul>
         <li><a href="/training/animate-on-scroll-webpage-aos-library">Animate On Scroll | AOS Library</a></li>
+        <li><a href="/training/bootstrap5-crash-course">Bootstrap 5</a></li>
+        <li><a href="/training/build-portfolio-website">Portfolio</a></li>
+        <li><a href="/training/cms-admin-bootstrap-theme">CMS Admin Theme</a></li>
+        <li><a href="/training/creative-agency-website">Creative Agency Website</a></li>
+        <li><a href="/training/css-grid-layout-with-image-span">CSS Grid Layout</a></li>
+        <li><a href="/training/custom-bootstrap-theme-with-sass">Custom Theme</a></li>
+        <li><a href="/training/easy-fullscreeen-landing-page">Fullscreen Landing Page</a></li>
+        <li><a href="/training/first-website">Website</a></li>
+        <li><a href="/training/full-image-slider-no-libraries">Full Image Slider</a></li>
+        <li><a href="/training/full-screen-video-background">Full Screen Video Background</a></li>
+        <li><a href="/training/full-screen-video-background-2">Full Screen Video Background</a></li>
+        <li><a href="/training/grid-css-responsive-mobile-first-website">Mobile Fisrt Website</a></li>
+        <li><a href="/training/hulu-webpage-clone">Hulu Clone</a></li>
+        <li><a href="/training/landing-page-rellaxjs">Rellax JS</a></li>
+        <li><a href="/training/landing-page-with-blur-effect">Blur Effect</a></li>
+        <li><a href="/training/miscrosoft-landing-page">Microsoft Landing Page</a></li>
+        <li><a href="/training/mobile-first-responsive-form">Responsive Form</a></li>
+        <li><a href="/training/mobile-first-website">Mobile First</a></li>
+        <li><a href="/training/modern-landing-page-website">Modern Landing Page</a></li>
+        <li><a href="/training/netflix-landing-page">Netflix Landing Page</a></li>
+        <li><a href="/training/parallax-website-html-css">Parallax Website</a></li>
+        <li><a href="/training/pluralsight-login-page">Pluralsight Login Page</a></li>
+        <li><a href="/training/presentation-slide-website">Presentation Slide</a></li>
+        <li><a href="/training/product-landing-page-html-css">Product Landing Page</a></li>
+        <li><a href="/training/pure-css-hamburger-menu-overlay">Pure CSS Hamburger</a></li>
+        <li><a href="/training/responsive-grid-css-website">Responsive Grid</a></li>
+        <li><a href="/training/responsive-html-css-flexboxgrid">Flexbox Grid</a></li>
+        <li><a href="/training/responsive-landing-page">Responsive Landing Page</a></li>
+        <li><a href="/training/responsive-website">Resposive Website</a></li>
+        <li><a href="/training/responsive-website-html-css-grid-flexbox">Responsive Website Grid Flexbox</a></li>
+        <li><a href="/training/scroll-animation-using-scrollreveal">Scrollreveal</a></li>
+        <li><a href="/training/sliding-signin-signup-form">Sliding Signup</a></li>
+        <li><a href="/training/smooth-scrolling">Smooth Scrolling</a></li>
+        <li><a href="/training/travel-agency-theme-materialize-css">Travel Agency</a></li>
+
+
     </ul>
 </body>
 </html>
