--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,44 +9,106 @@
 </head>
 <body>
     <h1>Nitin Thakur</h1>
-    <ul>
-        <li><a href="/training/animate-on-scroll-webpage-aos-library">Animate On Scroll | AOS Library</a></li>
-        <li><a href="/training/bootstrap5-crash-course">Bootstrap 5</a></li>
-        <li><a href="/training/build-portfolio-website">Portfolio</a></li>
-        <li><a href="/training/cms-admin-bootstrap-theme">CMS Admin Theme</a></li>
-        <li><a href="/training/creative-agency-website">Creative Agency Website</a></li>
-        <li><a href="/training/css-grid-layout-with-image-span">CSS Grid Layout</a></li>
-        <li><a href="/training/custom-bootstrap-theme-with-sass">Custom Theme</a></li>
-        <li><a href="/training/easy-fullscreeen-landing-page">Fullscreen Landing Page</a></li>
-        <li><a href="/training/first-website">Website</a></li>
-        <li><a href="/training/full-image-slider-no-libraries">Full Image Slider</a></li>
-        <li><a href="/training/full-screen-video-background">Full Screen Video Background</a></li>
-        <li><a href="/training/full-screen-video-background-2">Full Screen Video Background</a></li>
-        <li><a href="/training/grid-css-responsive-mobile-first-website">Mobile Fisrt Website</a></li>
-        <li><a href="/training/hulu-webpage-clone">Hulu Clone</a></li>
-        <li><a href="/training/landing-page-rellaxjs">Rellax JS</a></li>
-        <li><a href="/training/landing-page-with-blur-effect">Blur Effect</a></li>
-        <li><a href="/training/miscrosoft-landing-page">Microsoft Landing Page</a></li>
-        <li><a href="/training/mobile-first-responsive-form">Responsive Form</a></li>
-        <li><a href="/training/mobile-first-website">Mobile First</a></li>
-        <li><a href="/training/modern-landing-page-website">Modern Landing Page</a></li>
-        <li><a href="/training/netflix-landing-page">Netflix Landing Page</a></li>
-        <li><a href="/training/parallax-website-html-css">Parallax Website</a></li>
-        <li><a href="/training/pluralsight-login-page">Pluralsight Login Page</a></li>
-        <li><a href="/training/presentation-slide-website">Presentation Slide</a></li>
-        <li><a href="/training/product-landing-page-html-css">Product Landing Page</a></li>
-        <li><a href="/training/pure-css-hamburger-menu-overlay">Pure CSS Hamburger</a></li>
-        <li><a href="/training/responsive-grid-css-website">Responsive Grid</a></li>
-        <li><a href="/training/responsive-html-css-flexboxgrid">Flexbox Grid</a></li>
-        <li><a href="/training/responsive-landing-page">Responsive Landing Page</a></li>
-        <li><a href="/training/responsive-website">Resposive Website</a></li>
-        <li><a href="/training/responsive-website-html-css-grid-flexbox">Responsive Website Grid Flexbox</a></li>
-        <li><a href="/training/scroll-animation-using-scrollreveal">Scrollreveal</a></li>
-        <li><a href="/training/sliding-signin-signup-form">Sliding Signup</a></li>
-        <li><a href="/training/smooth-scrolling">Smooth Scrolling</a></li>
-        <li><a href="/training/travel-agency-theme-materialize-css">Travel Agency</a></li>
-
-
+    <ul class="buttons">
+        <li><button id="tab-1" class="tab-item button1">Training</button></li>
+        <li><button id="tab-2" class="tab-item button2">Cheat<br/> Sheets</button></li>
+        <li><button id="tab-3" class="tab-item button3">Self<br/> Projects</button></li>
     </ul>
+
+    <!-- <div class="arrow-images">
+        <div class="image1" id="arrow-item1">
+            <img src="img/image1.png" alt="" />
+        </div>
+        <div class="image3 arrow-item" id="arrow-item3">
+            <img src="img/image3.png" alt="" />
+        </div>
+        <div class="image2 arrow-item" id="arrow-item2">
+            <img src="img/image2.png" alt="" />
+        </div>
+        
+    </div> -->
+
+    <section class="tab-content-item" id="tab-1-content">
+        <h2>Training</h2>
+        <ul class="training">
+            <li><a href="/training/animate-on-scroll-webpage-aos-library">Animate On Scroll | AOS Library</a></li>
+            <li><a href="/training/bootstrap5-crash-course">Bootstrap 5</a></li>
+            <li><a href="/training/build-portfolio-website">Portfolio</a></li>
+            <li><a href="/training/cms-admin-bootstrap-theme">CMS Admin Theme</a></li>
+            <li><a href="/training/creative-agency-website">Creative Agency Website</a></li>
+            <li><a href="/training/css-grid-layout-with-image-span">CSS Grid Layout</a></li>
+            <li><a href="/training/custom-bootstrap-theme-with-sass">Custom Theme</a></li>
+            <li><a href="/training/easy-fullscreeen-landing-page">Fullscreen Landing Page</a></li>
+            <li><a href="/training/first-website">Website</a></li>
+            <li><a href="/training/full-image-slider-no-libraries">Full Image Slider</a></li>
+            <li><a href="/training/full-screen-video-background">Full Screen Video Background</a></li>
+            <li><a href="/training/full-screen-video-background-2">Full Screen Video Background</a></li>
+            <li><a href="/training/grid-css-responsive-mobile-first-website">Mobile Fisrt Website</a></li>
+            <li><a href="/training/hulu-webpage-clone">Hulu Clone</a></li>
+            <li><a href="/training/landing-page-rellaxjs">Rellax JS</a></li>
+            <li><a href="/training/landing-page-with-blur-effect">Blur Effect</a></li>
+            <li><a href="/training/miscrosoft-landing-page">Microsoft Landing Page</a></li>
+            <li><a href="/training/mobile-first-responsive-form">Responsive Form</a></li>
+            <li><a href="/training/mobile-first-website">Mobile First</a></li>
+            <li><a href="/training/modern-landing-page-website">Modern Landing Page</a></li>
+            <li><a href="/training/netflix-landing-page">Netflix Landing Page</a></li>
+            <li><a href="/training/parallax-website-html-css">Parallax Website</a></li>
+            <li><a href="/training/pluralsight-login-page">Pluralsight Login Page</a></li>
+            <li><a href="/training/presentation-slide-website">Presentation Slide</a></li>
+            <li><a href="/training/product-landing-page-html-css">Product Landing Page</a></li>
+            <li><a href="/training/pure-css-hamburger-menu-overlay">Pure CSS Hamburger</a></li>
+            <li><a href="/training/responsive-grid-css-website">Responsive Grid</a></li>
+            <li><a href="/training/responsive-html-css-flexboxgrid">Flexbox Grid</a></li>
+            <li><a href="/training/responsive-landing-page">Responsive Landing Page</a></li>
+            <li><a href="/training/responsive-website">Resposive Website</a></li>
+            <li><a href="/training/responsive-website-html-css-grid-flexbox">Responsive Website Grid Flexbox</a></li>
+            <li><a href="/training/scroll-animation-using-scrollreveal">Scrollreveal</a></li>
+            <li><a href="/training/sliding-signin-signup-form">Sliding Signup</a></li>
+            <li><a href="/training/smooth-scrolling">Smooth Scrolling</a></li>
+            <li><a href="/training/travel-agency-theme-materialize-css">Travel Agency</a></li>
+        </ul>
+    </section>
+
+    <section class="tab-content-item" id="tab-2-content">
+        <h2>Cheat Sheets</h2>
+        <ul class="cheat-sheets">
+            <li><a href="cheat-sheets/bulma-css-framework/">Bulma CSS Framework</a></li>
+            <li><a href="cheat-sheets/css-shapes/">CSS Shapes</a></li>
+            <li><a href="cheat-sheets/css/">CSS</a></li>
+            <li><a href="cheat-sheets/css3-animation-and-transition/">CSS Animation & Transition</a></li>
+            <li><a href="cheat-sheets/flexbox/">Flexbox</a></li>
+            <li><a href="cheat-sheets/foundation-framework/">Foundation Framework</a></li>
+            <li><a href="cheat-sheets/grid-layout/">Grid Layout</a></li>
+            <li><a href="cheat-sheets/how-to-use-srcset/">SRCSET</a></li>
+            <li><a href="cheat-sheets/html/">HTML</a></li>
+            <li><a href="cheat-sheets/materialize-css-js/">Materialize CSS JS</a></li>
+            <li><a href="cheat-sheets/skeleton-css/">Skeleton CSS</a></li>
+            <li><a href="cheat-sheets/twitter-bootstrap/">Twitter Bootstrap</a></li>
+        </ul>
+    </section>
+
+    <section class="tab-content-item" id="tab-3-content">
+        <h2>Self Projects</h2>
+        <ul class="self-projects">
+            <li><a href="self-projects/accordion/">Accordian</a></li>
+            <li><a href="self-projects/change-background-color/">Change Background Color</a></li>
+            <li><a href="self-projects/checkbox-sorting/">Checkbox Sorting</a></li>
+            <li><a href="self-projects/html-css-javascript-website/">HTML CSS JS Website</a></li>
+            <li><a href="self-projects/input-range-page-length/">Input Range Page Length</a></li>
+            <li><a href="self-projects/javascript-counter/">Javascript Counter</a></li>
+            <li><a href="self-projects/js-modal/">JS Modal</a></li>
+            <li><a href="self-projects/load-more/">Load More</a></li>
+            <li><a href="self-projects/move-to-top/">Move To Top</a></li>
+            <li><a href="self-projects/moving-car/">Moving Car</a></li>
+            <li><a href="self-projects/responsive-before-after-slider/">Responsive Before After Slider</a></li>
+            <li><a href="self-projects/reviews-card-slider/">Review Card Slider</a></li>
+            <li><a href="self-projects/sorting-list/">Sorting List</a></li>
+            <li><a href="self-projects/tab-control/">Tab Control</a></li>
+            <li><a href="self-projects/text-auto-completion/">Text Auto Completion</a></li>
+        </ul>
+    </section>
+
+    <!-- Script File -->
+    <script src="main.js"></script>
 </body>
 </html>
