--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         
     </div> -->
 
+    <div class="dragon">
+    </div>
+
     <section class="tab-content-item" id="tab-1-content">
-        <h2>Training</h2>
+        <!-- <h2>Training</h2> -->
         <ul class="training">
             <li><a href="/training/animate-on-scroll-webpage-aos-library">Animate On Scroll | AOS Library</a></li>
             <li><a href="/training/bootstrap5-crash-course">Bootstrap 5</a></li>
@@ -70,7 +73,7 @@
     </section>
 
     <section class="tab-content-item" id="tab-2-content">
-        <h2>Cheat Sheets</h2>
+        <!-- <h2>Cheat Sheets</h2> -->
         <ul class="cheat-sheets">
             <li><a href="cheat-sheets/bulma-css-framework/">Bulma CSS Framework</a></li>
             <li><a href="cheat-sheets/css-shapes/">CSS Shapes</a></li>
@@ -88,7 +91,7 @@
     </section>
 
     <section class="tab-content-item" id="tab-3-content">
-        <h2>Self Projects</h2>
+        <!-- <h2>Self Projects</h2> -->
         <ul class="self-projects">
             <li><a href="self-projects/accordion/">Accordian</a></li>
             <li><a href="self-projects/change-background-color/">Change Background Color</a></li>
