--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,13 @@
     <title>Nitin | Training</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Nitin Thakur</h1>
     <ul class="buttons">
         <li><button id="tab-1" class="tab-item button1">Training</button></li>
-        <li><button id="tab-2" class="tab-item button2">Cheat<br/> Sheets</button></li>
-        <li><button id="tab-3" class="tab-item button3">Self<br/> Projects</button></li>
+        <li><button id="tab-2" class="tab-item button2">Cheat<br /> Sheets</button></li>
+        <li><button id="tab-3" class="tab-item button3">Self<br /> Projects</button></li>
     </ul>
 
     <!-- <div class="arrow-images">
@@ -108,10 +110,12 @@
             <li><a href="self-projects/sorting-list/">Sorting List</a></li>
             <li><a href="self-projects/tab-control/">Tab Control</a></li>
             <li><a href="self-projects/text-auto-completion/">Text Auto Completion</a></li>
+            <li><a href="self-projects/underline-effect/">Underline Effect</a></li>
         </ul>
     </section>
 
     <!-- Script File -->
     <script src="main.js"></script>
 </body>
+
 </html>
