Adding back to top snippet!

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <li><a href="self-projects/tab-control/">Tab Control</a></li>
             <li><a href="self-projects/text-auto-completion/">Text Auto Completion</a></li>
             <li><a href="self-projects/underline-effect/">Underline Effect</a></li>
+            <li><a href="self-projects/back-to-top-button/">Back To Top</a></li>
         </ul>
     </section>
 
