Adding QA accordian!

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <section class="tab-content-item" id="tab-3-content">
         <!-- <h2>Self Projects</h2> -->
         <ul class="self-projects">
+            <li><a href="self-projects/accordian-qa/">QA Accordian</a></li>
             <li><a href="self-projects/accordion/">Accordian</a></li>
             <li><a href="self-projects/change-background-color/">Change Background Color</a></li>
             <li><a href="self-projects/checkbox-sorting/">Checkbox Sorting</a></li>
