--- a/self-projects/accordian-qa/index.html
+++ b/self-projects/accordian-qa/index.html
@@ -1,13 +1,68 @@
-<div class="container">
-  <div class="Accordions">
-	<div class="Accordion_item">
-			<div class="title_tab">
-				<h2 class="title"><span class="icon"></span></h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pure HTML CSS Accordion" />
+
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Accordion | QA</title>
+  </head>
+  <body>
+    <main>
+		<h3 style="text-align: center;">FAQs</h3>
+		<div class="container accordian">
+		  <div class="Accordions">
+			<div class="Accordion_item">
+					<div class="title_tab">
+						<h2 class="title">What is Zoom Teeth Whitening?<span class="icon"></span></h2>
+					</div>
+						<div class="inner_content">
+					   <p>Zoom is a form of laser teeth whitening treatment that relies on blue light to activate bleaching chemicals. It is a sought-after teeth whitening technique in Los Angeles and other parts worldwide. It's effective because it lasts for one to two years, and it's a quick procedure - it only takes about an hour.&nbsp;</p>
+		<p><a href="https://exquisitedentistryla.com/">Exquisite Dentistry</a> performs laser teeth whitening here in Hollywood with Zoom! It is the recently developed and most effective teeth whitening technology we have. We use Zoom for effective teeth whitening and to give our clients a brighter smile.</p>
+						</div>
 			</div>
-            	<div class="inner_content">
-               
-            	</div>
-	</div>
-        
-  </div>
-</div>
+				<div class="Accordion_item">
+					<div class="title_tab">
+						<h2 class="title">What Else Does the Teeth Whitening Process Involve?<span class="icon"></span></h2>
+					</div>
+						<div class="inner_content">
+					   <p>As a standard procedure, we first use a modern system to clean your teeth to maximize whitening treatment results. We use this system with Prophy-Jet and Hydrosonic scaler to polish your teeth. The treatment involves light-activated bleaching. Dr. Aguila and his team take additional precautions to protect your gums and lips.</p>
+		<p>This modern tooth whitening technique is a lower-sensitivity treatment solution. We put on fluoride after whitening for clients who have sensitive teeth for further protection. This assures our clients of total safety after undergoing the process of teeth whitening.</p>
+						</div>
+			</div>
+		<div class="Accordion_item">
+					<div class="title_tab">
+						<h2 class="title">Are Teeth Whitening Results Permanent?<span class="icon"></span></h2>
+					</div>
+						<div class="inner_content">
+					   <p>The whitening effects of Zoom often last one or two years. Clients who practice good oral hygiene and who avoid the staining effects of tobacco and frequent coffee drinking are more likely to see long-lasting results. We recommend regular brushing and avoiding substances that stain teeth to keep your teeth white after your teeth whitening treatment here in Los Angeles.</p>
+						</div>
+			</div>
+		<div class="Accordion_item">
+					<div class="title_tab">
+						<h2 class="title">Can Teeth Treatment Be Done on Crowns and Cavities?<span class="icon"></span></h2>
+					</div>
+						<div class="inner_content">
+					   <p>Teeth whitening systems are contrived to whiten the enamel only. Present restorations like dentures, crowns, cavity fillings, and veneers do not lighten. Any dental crowns or veneers will need to be re-done to match the new color of your teeth.</p>
+						</div>
+			</div>
+		<div class="Accordion_item">
+					<div class="title_tab">
+						<h2 class="title">Are the Results Immediate?<span class="icon"></span></h2>
+					</div>
+						<div class="inner_content">
+					   <p>Yes! You can expect to see noticeably whiter teeth immediately after your one-hour Zoom appointment. The smile you see in the mirror that afternoon will be brighter than the one you saw that morning.</p>
+						</div>
+			</div>
+		  </div>
+		</div>
+    </main>
+  </body>
+
+  <script src="main.js"></script>
+</html>
+
