--- a/self-projects/accordian-qa/index.html
+++ b/self-projects/accordian-qa/index.html
@@ -62,7 +62,7 @@
 		</div>
     </main>
   </body>
-
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="main.js"></script>
 </html>
 
