--- a/self-projects/accordian-qa/index.html
+++ b/self-projects/accordian-qa/index.html
@@ -9,6 +9,8 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css" />
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <title>Accordion | QA</title>
   </head>
   <body>
@@ -62,7 +64,7 @@
 		</div>
     </main>
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  
   <script src="main.js"></script>
 </html>
 
